Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6234

lfs computes pool name length incorrectly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • Lustre 2.7.0
    • None
    • lustre-master tag 2.6.93
    • 3
    • 17464

      When dealing with pools, you need to specify the file system name in front of the pool name as <fsname>.<pool_name>. The pool name, without the file system name, has a max length of 15 characters and is correctly enforced:

      # lctl pool_new scratch.test_82b
      Pool scratch.test_82b created
      # lctl pool_new scratch.test_82abcdefgh
      Pool scratch.test_82abcdefgh created
      # lctl pool_new scratch.test_82abcdefghi
      poolname test_82abcdefghi is too long (length is 16 max is 15)
      argument scratch.test_82abcdefghi must be <fsname>.<poolname>
      pool_new: File name too long
      

      Yet, when specifying a pool name in 'lfs setstripe', the file system name is used to compute the length of the pool name. The file system name is required when using the '-p' option in 'lfs setstripe' as in the second example below.

      # /usr/bin/lfs setstripe -p scratch.test_82b -o 7936 /lustre/scratch/d82b.conf-sanity/f82b.conf-sanity
      error: setstripe: pool name 'scratch.test_82b' is too long (max is 15 characters)
      ...
      # /usr/bin/lfs setstripe -p test_82b -o 4 /lustre/scratch/d82b.conf-sanity/f82b.conf-sanity
      can't find fs root for '/lustre/scratch/d82b.conf-sanity': -19
      '/lustre/scratch/d82b.conf-sanity/f82b.conf-sanity' is not on a Lustre filesystem: No such device (19)
      error: setstripe: create stripe file '/lustre/scratch/d82b.conf-sanity/f82b.conf-sanity' failed
      ...
      

      This caused problems with the conf-sanity test 82b at https://testing.hpdd.intel.com/test_sets/e9152f7c-ade4-11e4-a0b6-5254006e85c2

            bobijam Zhenyu Xu
            jamesanunez James Nunez (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            12 Start watching this issue

              Created:
              Updated:
              Resolved: