LU-6234 lfs: check pool name length w/o fsname in it

The pool name length check should not include its fsname. This patch
get rid of the possibly added fsname in the pool name argument.

Signed-off-by: Bobi Jam <bobijam.xu@intel.com>
Change-Id: I4f542e1bc7b3ea97b35ec60e51aa971e73da91eb