lustre/utils/lfs.c
@@ -815,11 +815,35 @@ static int lfs_setstripe(int argc, char **argv)
 		return CMD_HELP;
 	}
 
-	if (pool_name_arg && strlen(pool_name_arg) > LOV_MAXPOOLNAME) {
-		fprintf(stderr,
-			"error: %s: pool name '%s' is too long (max is %d characters)\n",
-			argv[0], pool_name_arg, LOV_MAXPOOLNAME);
-		return CMD_HELP;
+	if (pool_name_arg != NULL) {
+		char	*ptr;
+
+		ptr = strchr(pool_name_arg, '.');
+		if (ptr == NULL) {
+			ptr = pool_name_arg;
+		} else {
+			if ((ptr - pool_name_arg) == 0) {
+				fprintf(stderr, "error: %s: fsname is empty "
+					"in pool name '%s'\n",
+					argv[0], pool_name_arg);
+				return CMD_HELP;
+			}
+
+			++ptr;
+			if (*ptr == '\0') {
+				fprintf(stderr, "error: %s: poolname '%s' is "
+					"empty\n",
+					argv[0], pool_name_arg);
+				return CMD_HELP;
+			}
+		}
+
+		if (strlen(ptr) > LOV_MAXPOOLNAME) {
+			fprintf(stderr, "error: %s: pool name '%s' is too long "
+				"(max is %d characters)\n",
+				argv[0], pool_name_arg, LOV_MAXPOOLNAME);
+			return CMD_HELP;
+		}
 	}
 
 	/* get the stripe size */
